add some style fix and user provider to login page

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -10,7 +10,7 @@
     "Password": "كلمة المرور",
     "confirm Password": "تأكيد كلمة المرور",
     "Username": "اسم المستخدم",
-    "New Account?": "حساب جديد?",
+    "New Account?": "حسـاب جديد ؟",
     "Forget Your Password!": "نسيت كلمة المرور !",
     "Companies Login Area": "منطقه دخول الشركات",
     "Clients Login Area": "منطقه دخول العملاء",
