#3 modify app styles and pages

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -157,5 +157,7 @@
     "Upload-Image": "تحميل صورة",
     "From-file": "تحميل من ملف",
     "From-camera": "التقاط من الكاميرا",
-    "Choose-Language": "تغيير اللغة"
+    "Choose-Language": "تغيير اللغة",
+    "reject": "انهاء",
+    "Usage policy": "سياسة الاستخدام"
 }
