#6 work on app styles home & profile page

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -21,7 +21,7 @@
     "Requests": "الطلبات",
     "Messages": "الرسائل",
     "Settings": "الاعدادات",
-    "Close-services": "خدمات قريبة",
+    "nearby-services": "خدمات قريبة",
     "Get-qoutes": "طلب خدمة",
     "Book-schedule": "حجز موعد",
     "Recived-Requests": "الطلبات المستلمة",
