--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,7 +21,7 @@
         "Requests": "Requests",
         "Messages": "Messages",
         "Settings": "Settings",
-        "Close-services": "Close-services",
+        "nearby-services": "Nearby-services",
         "Get-qoutes": "Get qoutes",
         "Book-schedule": "Book & schedule",
         "Recived-Requests": "Recived Requests",
