add sub directory service provider

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,7 +22,7 @@
         "Messages": "Messages",
         "Settings": "Settings",
         "nearby-services": "Nearby-services",
-        "Get-qoutes": "Get qoutes",
+        "Get-qoutes": "Request Service",
         "Book-schedule": "Book & schedule",
         "Recived-Requests": "Recived Requests",
         "Excuted-Requests": "Excuted Requests",
