create and inject ubzil loader add subcategory and other neccessary services fix add config icon on pages and modals

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -159,5 +159,8 @@
     "From-camera": "التقاط من الكاميرا",
     "Choose-Language": "تغيير اللغة",
     "reject": "انهاء",
-    "Usage policy": "سياسة الاستخدام"
+    "Usage policy": "سياسة الاستخدام",
+    "km": "كم",
+    "serProvs": "مقدمى الخدمة",
+    "subCat":"قسم فرعي"
 }
