--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -163,6 +163,7 @@
         "Usage policy": "Usage policy",
         "km": "KM",
         "serProvs": "Service providers",
-        "subCat":"Sub Category"
+        "subCat":"Sub Category",
+        "رقم": "number"
 
 }
